--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -149,6 +149,9 @@ android {
 }
 
 dependencies {
+    // for splash screen
+    implementation project(':react-native-splash-screen')
+    
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
 
